--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,12 +15,12 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-
-    - name: Set up JDK 11
+    
+    - name: Set up JDK 17
       uses: actions/setup-java@v2
       with:
-        java-version: '11'
-        distribution: 'adopt'  # Specify the distribution here
+        java-version: '17'
+        distribution: 'adopt'
 
     - name: Cache Maven dependencies
       uses: actions/cache@v2
