--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,10 @@ spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto= update
+
+# Redis configuration
+spring.redis.host=localhost
+spring.redis.port=6379
+
+# Cache configuration
+spring.cache.type=redis
